# Automatic-Differentiation

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  test.yml
best_autodiff/: __init__.py  dualnumber.py  forward.py  functions.py  graph.py  reverse.py  rfunctions.py
demo/: demo.ipynb
docs/: documentation.ipynb  milestone1.ipynb  milestone2.ipynb  milestone2_progress.md
tests/: check_coverage.sh  run_tests.sh  test_dualnumber.py  test_forward.py  test_functions.py  test_graph.py  test_integration.py  test_reverse.py  test_rfunctions.py
tests/htmlcov/: d_99c58dff0755ec3d___init___py.html  d_99c58dff0755ec3d_dualnumber_py.html  d_99c58dff0755ec3d_forward_py.html  d_99c58dff0755ec3d_functions_py.html  index.html  status.json
