[metadata]
name = best_autodiff
version = 0.0.7
author = Team02 (Alison Yao, Isidora Diaz, Isha Vaish, Isabella Bossa)
author_email = isabellabossa@g.harvard.edu
description = Automatic differentiation package implementing forward and reverse modes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://code.harvard.edu/CS107/team02
classifiers = 
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires = 
	python_version>="3.6"
	numpy